--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,3 +28,9 @@ repos:
     hooks:
       - id: flake8
         args: ['--max-line-length', '80', '--ignore', 'E203,W503']
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.8.0
+    hooks:
+      - id: mypy
+        additional_dependencies: [pydantic]
+        args: [--config-file=mypy.ini, --check-untyped-defs]
